// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserEditForm /> Should render correctly 1`] = `
<div>
  <div
    class="sc-csuSiG"
  >
    <label
      class="sc-fEXmlR fcnjli"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-dIfARi egSfao"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-dIfARi egSfao"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkrFOg jeTODs sc-eDWCr fujPXy"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;

exports[`<UserEditForm /> Should render correctly with admin controls shown 1`] = `
<div>
  <div
    class="sc-csuSiG"
  >
    <label
      class="sc-fEXmlR fcnjli"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-dIfARi egSfao"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-dIfARi egSfao"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="admin_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Is admin"
          class="sc-jrcTuL bUxtxE"
          name="Is admin"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Is admin
      </div>
    </label>
    <button
      class="sc-dkrFOg jeTODs sc-eDWCr fujPXy"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;
